--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@supabase/supabase-js": "^2.57.4",
     "expo": "^54.0.9",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
