--- a/backend/env.example
+++ b/backend/env.example
@@ -1,4 +1,10 @@
-# Database Configuration
+# Supabase Configuration (REQUIRED)
+# Get these from: https://supabase.com/dashboard → Your Project → Settings → API
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
+# Database Configuration (for direct PostgreSQL access if needed)
+# Get from Supabase: Settings → Database → Connection string
 DATABASE_URL=postgresql://username:password@localhost:5432/docuscan_db
 DB_HOST=localhost
 DB_PORT=5432
@@ -6,7 +12,7 @@ DB_NAME=docuscan_db
 DB_USER=your_username
 DB_PASSWORD=your_password
 
-# JWT Configuration
+# JWT Configuration (not currently used - Supabase handles auth)
 JWT_SECRET=your_super_secret_jwt_key_here
 JWT_EXPIRES_IN=7d
 
