--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.2.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1"
@@ -63,6 +64,7 @@
     "eslint-config-expo": "~10.0.0",
     "jest": "~29.7.0",
     "jest-expo": "~54.0.12",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "~5.9.2"
   },
   "private": true
