Add Google Vision API integration and update backend for deployment

--- a/backend/env.example
+++ b/backend/env.example
@@ -24,3 +24,16 @@ NODE_ENV=development
 MAX_FILE_SIZE=10485760
 UPLOAD_PATH=./uploads
 
+# AI Configuration
+# Default provider: google_vision (recommended for production) or ollama (for local dev)
+AI_PROVIDER=google_vision
+
+# Google Cloud Vision API (RECOMMENDED for production)
+# Get your API key from: https://console.cloud.google.com/apis/credentials
+# See GOOGLE_VISION_SETUP.md for complete setup instructions
+GOOGLE_CLOUD_API_KEY=your-google-cloud-api-key-here
+
+# Ollama Configuration (Optional - for local development)
+# Only needed if you want to use local Ollama instead of Google Vision
+OLLAMA_HOST=http://localhost:11434
+
