--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/vision": "^5.3.4",
     "@supabase/supabase-js": "^2.45.4",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
