--- a/app.json
+++ b/app.json
@@ -35,7 +35,7 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#FDFDFC"
+          "backgroundColor": "#191919"
         }
       ],
       [
