--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "puppeteer": "^23.7.0",
     "pg": "^8.16.3",
     "uuid": "^10.0.0"
   },
