--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "build": "tsc && npx puppeteer browsers install chrome",
+    "postinstall": "npx puppeteer browsers install chrome || true",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
