--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
     "expo-checkbox": "~5.0.7",
+    "expo-clipboard": "^8.0.7",
     "expo-constants": "~18.0.9",
     "expo-file-system": "~19.0.14",
     "expo-font": "~14.0.8",
