adding AI smart text correction

--- a/backend/env.example
+++ b/backend/env.example
@@ -37,3 +37,14 @@ GOOGLE_CLOUD_API_KEY=your-google-cloud-api-key-here
 # Only needed if you want to use local Ollama instead of Google Vision
 OLLAMA_HOST=http://localhost:11434
 
+# Text Enhancement Configuration
+# Provider: ollama (free, local) or gemini (paid, cloud)
+TEXT_ENHANCEMENT_PROVIDER=ollama
+
+# Ollama models for text enhancement
+OLLAMA_CORRECTION_MODEL=llama3.1:8b
+OLLAMA_ANALYSIS_MODEL=llama3.1:70b
+
+# Gemini API (for future use)
+GOOGLE_AI_API_KEY=your-gemini-api-key-here
+
