--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.1.10",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "jest": "~29.7.0",
