--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@google-cloud/vision": "^5.3.4",
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.45.4",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -24,8 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "puppeteer": "^23.7.0",
     "pg": "^8.16.3",
+    "puppeteer": "^23.7.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
