--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "openai": "^6.9.1",
     "pg": "^8.16.3",
     "puppeteer": "^23.7.0",
     "uuid": "^10.0.0"
